# AI_Project

./: .gitignore  main.py  pyproject.toml
api/routes/: upload.py
rag/: loader.py
vector-db/: ___init__.py  retrieve-data.py
